<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshkohli.yogesh_kohli_assignment_2.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:text="@string/textviewMajor"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSelectedMajorString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone"
        tools:text="Major" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/textviewPhone"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        tools:text="Phone" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:text="@string/textviewEmail"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge"
        tools:text="Email" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/textviewAge"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName"
        tools:text="Age" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/editTextStringAge"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAge"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="16dp"
        android:text="@string/textviewLastName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextLastName"
        app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Last Name" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/editTextStringLastName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textviewFirstName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="First Name" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/editTextStringFirstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/editTextStringEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/editTextStringPhone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textViewSelectedMajorString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="2dp"
        android:onClick="selectMajorButtonClicked"
        android:text="@string/select_a_major"
        app:layout_constraintBottom_toTopOf="@+id/buttonDone"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectedMajorString"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedMajorString" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:onClick="doneButtonClicked"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textViewSelectedMajorString"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="19dp"
        android:text="@string/not_string_not_selected"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewMajor"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</android.support.constraint.ConstraintLayout>
