<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshkohli.yogesh_kohli_assignment_2.AdvanceDegreeActivity"
    tools:layout_editor_absoluteY="81dp">

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.yogeshkohli.yogesh_kohli_assignment_2.AdvanceDegreeFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdvanceDegreeHeading"
        tools:layout="@layout/advance_degree_list_fragment" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/cancel_selection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_marginBottom="10dp"
        android:text="@string/not_selected"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="@+id/buttonCancel"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="15dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewAdvanceDegreeHeading"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:text="@string/advance_degree_list"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
