<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshkohli.yogesh_kohli_assignment_2.MajorSelectionActivity"
    tools:layout_editor_absoluteY="81dp">


    <fragment
        android:id="@+id/fragment"
        android:name="com.example.yogeshkohli.yogesh_kohli_assignment_2.MajorSelectionFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSelectedMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMajorHeading"
        tools:layout="@layout/major_list_fragment" />

    <Button
        android:id="@+id/buttonDoneMajorSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:text="@string/selectButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedMajor" />

    <TextView
        android:id="@+id/textViewSelectedMajor"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:text="@string/textviewSelectedMajor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDoneMajorSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <TextView
        android:id="@+id/textViewMajorHeading"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="7dp"
        android:text="@string/majors_list"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>

